[gd_scene load_steps=6 format=2]

[ext_resource path="res://Xolonium-Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://InGame.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2.9187, -1.70639, 0, 0, 0, 0, 473.313, -7.05179, 0, 0, 0, 0, 476.877, 707.449, 0, 0, 0, 0, 4.7005, 698.54, 0, 0, 0, 0, 2.9187, -1.70639 )
}

[node name="InGame" type="CanvasLayer"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.174
anchor_right = 0.5
anchor_bottom = 0.174
margin_left = -94.0
margin_top = -39.28
margin_right = 94.0
margin_bottom = 38.72
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.501
anchor_top = 0.929
anchor_right = 0.501
anchor_bottom = 0.929
margin_left = -117.317
margin_top = -41.649
margin_right = 117.683
margin_bottom = 36.351
custom_fonts/font = ExtResource( 1 )
text = "0s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimeTimer" type="Timer" parent="."]
wait_time = 0.005

[node name="StartDelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MobSpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnPoint" type="PathFollow2D" parent="MobSpawnPath"]
position = Vector2( 2.9187, -1.70639 )
rotation = -0.0113632

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, 368.832 )

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_TimeTimer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="." method="_on_StartDelayTimer_timeout"]
